[package]
name = "quasi"
version = "0.1.9"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
build = "build.rs"

[lib]
name = "quasi"
test = false

[dependencies]
syntex = "*"
syntex_syntax = "*"

[build-dependencies]
syntex = "*"
quasi_macros = "*"

[dev-dependencies.quasi_macros]
version = "0.1.9"
path = "quasi_macros"

[dev-dependencies]
syntex = { version = "*" }

[dev-dependencies.syntex_syntax]
version = "*"
git = "https://github.com/erickt/rust-syntex.git"

[[test]]
name = "test"
path = "tests/test.rs"
