[package]
name = "quasi"
version = "0.1.9"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[lib]
name = "quasi"
test = false

[dependencies.syntex]
version = "*"
git = "https://github.com/erickt/rust-syntex.git"

[dependencies.syntex_syntax]
version = "*"
git = "https://github.com/erickt/rust-syntex.git"

[dev-dependencies.quasi_macros]
version = "0.1.9"
path = "quasi_macros"
features = [ "default" ]

[[test]]
name = "test"
path = "tests/test.rs"
