[package]
name = "quasi_macros"
version = "0.1.9"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[lib]
name = "quasi_macros"
plugin = true

[dependencies.aster]
git = "https://github.com/erickt/rust-aster.git"
branch = "syntex"

[dependencies.syntex]
git = "https://github.com/erickt/rust-syntex.git"

[dependencies.syntex_syntax]
git = "https://github.com/erickt/rust-syntex.git"
